--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-loader": "^6.2.5",
     "events": "^1.1.1",
     "flux": "^3.0.0",
-    "react": "^15.3.2"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.17.0"
